--- a/applications/dashboard/scss/new-features/_embed.scss
+++ b/applications/dashboard/scss/new-features/_embed.scss
@@ -250,6 +250,7 @@ $embedded-linkImage_width: 225px !default;
     justify-content: flex-start;
     font-size: $embedded-linkTitle_fontSize;
     line-height: $embedded-linkTitle_lineHeight;
+    margin-bottom: 6px;
 }
 
 .embedLink-userName {
@@ -285,11 +286,7 @@ $embedded-linkImage_width: 225px !default;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin: 6px 0;
-
-    + .embedLink-excerpt {
-        margin-top: 0;
-    }
+    margin: 6px 0 0;
 }
 
 .embedLink-excerpt {
@@ -298,7 +295,6 @@ $embedded-linkImage_width: 225px !default;
     overflow: hidden;
     text-overflow: ellipsis;
     word-break: break-word;
-    margin-top: 12px;
     max-width: 100%;
     line-height: $embedded-linkTitle_lineHeight;
     max-height: #{$embedded-linkTitle_lineHeight * $embedded-linkTitle_fontSize * 3}
